Add button disabling during Generate Outreach and improve button selection

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <textarea id="context-note" placeholder="e.g., 'Met at AWS Summit', 'Also in fintech', 'Want coffee chat'..."></textarea>
                 </div>
 
-                <button class="btn-primary" onclick="generateOutreach()">Generate Outreach</button>
+                <button class="btn-primary" id="generate-outreach-btn" onclick="generateOutreach()">Generate Outreach</button>
                 
                 <div class="progress-bar-container" id="progress-container">
                     <div class="progress-bar">
